--- a/index.html
+++ b/index.html
@@ -1,77 +1,85 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhotoBlog</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Photo blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header -->
     <header class="header">
-        <nav class="headernav">
-
-            <ul>
-               <li><a href="#">Lifestyle</a></li>
-               <li><a href="#">photodiary</a></li>
-               <li><a href="#">music</a></li>
-               <li><a href="#">travel</a></li>
+        <div class="container">
+        <nav class="header-nav">
+            <ul class="header-list">
+                <li>
+                    <a class="header-link" href="#">LIFESTYLE</a>
+                </li>
+                <li>
+                    <a class="header-link" href="#">PHOTODIARY</a>
+                </li>
+                <li>
+                    <a class="header-link" href="#">MUSIC</a>
+                </li>
+                <li>
+                    <a class="header-link" href="#">TRAVEL</a>
+                </li>
             </ul>
         </nav>
+        </div>
     </header>
-    
-<main>
-    <h1>PhotoBlog</h1>
-    <div>
-        <ul>
-            <li>
-                <img src="img/1 1.png" alt="">
-                <span>Lifestyle</span>
-                <h2>More than just a music festival</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="img/2.png" alt="">
-                <span>Lifestyle</span>
-                <h2>Life tastes better with coffee</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi repellat numquam, veniam deserunt consequuntur, ipsam sapiente voluptatibus ratione ipsa ea officia. Deleniti nesciunt quibusdam adipisci ipsam? Animi necessitatibus reprehenderit architecto!</p>
-            </li>
-            <li>
-                <img src="img/3 1.png" alt="">
-                <span>PHOTODAIRY</span>
-                <h2>American dream</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi repellat numquam, veniam deserunt consequuntur, ipsam
-                    sapiente voluptatibus ratione ipsa ea officia. Deleniti nesciunt quibusdam adipisci ipsam? Animi necessitatibus
-                    reprehenderit architecto!</p>
-            </li>
-            <li>
-                <img src="img/4 1.png" alt="">
-                <span>PHOTODAIRY</span>
-                <h2>A day exploring the Alps</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
-            <li>
-                <img src="img/5.png" alt="">
-                <span>Lifestyle</span>
-                <h2>Top 10 song for running</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro fugit, animi sunt sit doloremque ex itaque beatae dignissimos autem optio magni, quibusdam quidem eum! Nihil molestiae facere quisquam aliquid ratione?</p>
-            </li>
-            <li>
-                <img src="img/6.png" alt="">
-                <span>LIFESTYLE</span>
-                <h2>Cold winter days</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-            </li>
 
-        </ul>
-        <button type="button">
-            Load More
-        </button>
-    </div>
-</main>
+    <main class="main">
+        <div class="container">
+        <h1 class="title">Photo blog</h1>
+        <div class="wrap">
+            <ul class="card-list">
+                <li class="card-item">
+                    <img class="card-img" src="photo1.png" alt="1">                    
+                    <span class="card-name">LIFESTYLE</span>
+                    <h2 class="card-title">More than just a music festival</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="card-item">
+                    <img class="card-img" src="photo2.png" alt="1">                    
+                    <span class="card-name">LIFESTYLE</span>                    
+                    <h2 class="card-title">Life tastes better with coffee</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="card-item">
+                    <img class="card-img" src="photo3.png" alt="1">                    
+                    <span class="card-name">PHOTODAIRY</span>
+                    <h2 class="card-title">American dream</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="card-item">
+                    <img class="card-img" src="photo4.png" alt="1">                  
+                    <span class="card-name">PHOTODAIRY</span>
+                    <h2 class="card-title">A day exploring the Alps</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="card-item">
+                    <img class="card-img" src="photo5.png" alt="1">                
+                    <span class="card-name">LIFESTYLE</span>
+                    <h2 class="card-title">Top 10 song for running</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.
+                    </li>
+                <li class="card-item">
+                    <img class="card-img" src="photo6.png" alt="1">               
+                    <span class="card-name">LIFESTYLE</span>
+                    <h2 class="card-title">Cold winter days</h2>
+                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.
+                </li>
+            </ul>
+            <button class="button" type="button">Load more</button>
+        </div>
+        </div>
+    </main>
 
 </body>
 </html>
