--- a/index.html
+++ b/index.html
@@ -3,83 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo blog</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="reset.css">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- header -->
-    <header class="header">
-        <div class="container">
-        <nav class="header-nav">
-            <ul class="header-list">
-                <li>
-                    <a class="header-link" href="#">LIFESTYLE</a>
-                </li>
-                <li>
-                    <a class="header-link" href="#">PHOTODIARY</a>
-                </li>
-                <li>
-                    <a class="header-link" href="#">MUSIC</a>
-                </li>
-                <li>
-                    <a class="header-link" href="#">TRAVEL</a>
-                </li>
-            </ul>
-        </nav>
-        </div>
-    </header>
+    <!--<button class="open-btn" data-modal-open>відкрити модалку</button>
 
-    <main class="main">
-        <div class="container">
-        <h1 class="title">Photo blog</h1>
-        <div class="wrap">
-            <ul class="card-list">
-                <li class="card-item">
-                    <img class="card-img" src="photo1.png" alt="1">                    
-                    <span class="card-name">LIFESTYLE</span>
-                    <h2 class="card-title">More than just a music festival</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="card-item">
-                    <img class="card-img" src="photo2.png" alt="1">                    
-                    <span class="card-name">LIFESTYLE</span>                    
-                    <h2 class="card-title">Life tastes better with coffee</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="card-item">
-                    <img class="card-img" src="photo3.png" alt="1">                    
-                    <span class="card-name">PHOTODAIRY</span>
-                    <h2 class="card-title">American dream</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="card-item">
-                    <img class="card-img" src="photo4.png" alt="1">                  
-                    <span class="card-name">PHOTODAIRY</span>
-                    <h2 class="card-title">A day exploring the Alps</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="card-item">
-                    <img class="card-img" src="photo5.png" alt="1">                
-                    <span class="card-name">LIFESTYLE</span>
-                    <h2 class="card-title">Top 10 song for running</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.
-                    </li>
-                <li class="card-item">
-                    <img class="card-img" src="photo6.png" alt="1">               
-                    <span class="card-name">LIFESTYLE</span>
-                    <h2 class="card-title">Cold winter days</h2>
-                    <p class="classparagraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <br> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea.
-                </li>
-            </ul>
-            <button class="button" type="button">Load more</button>
-        </div>
-        </div>
-    </main>
 
+     modal-window
+    <div class="backdrop is-hidden" data-modal>
+       <div class="modal">
+         <button class="btm" data-modal-close>закрити</button>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iste eos reiciendis facere magnam libero aliquid vel tempore eius consectetur, in exercitationem omnis, illum neque nostrum nisi? Nihil, accusamus dolorum.</p>
+       </div>
+    </div>--> 
+    
+
+    <!--<form>
+        <label for="">
+            <input type="text" required pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="nick Nice" minlength="2" maxlength="20px">
+        </label>
+        <label for="">
+            <input type="email" required>
+        </label>
+        <label for="">
+            <input type="number" min="1" max="20">
+        </label>
+        <label for="">
+            <input type="number" min="1" max="20" class="input-number">
+        </label>
+       <button type="submit">click</button>
+    </form>-->
+    <!--<button class="btn" data-modal-open>open</button>
+    <div class="backdrop is-hidden" data-modal>
+       <div class="modal">
+        <button class="btm" data-modal-close>close</button>
+        <form action="">
+            <label for="">
+                <input type="text" required minlength="5" maxlength="20">
+            </label>
+            <label for="">
+                <input type="email" required>
+            </label>
+            <label for="">
+                <input type="password" required>
+            </label>
+            <label for="">
+                <input type="checkbox">
+            </label>
+            <button class="btn" disabled>send</button>
+        </form>
+       </div>
+    </div>
+    <script src="./script.js"></script>-->
+    
+
+
+
+    <!--<div class="box">
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores mollitia reiciendis qui animi unde perspiciatis impedit sunt quia facere, culpa recusandae suscipit ipsam laborum non possimus id dolor. Ea, quas.</p>
+        <div class="overlay">
+            <p>hello</p>
+        </div>
+    </div>-->
+
+     <!--<h1>hello world</h1>
+
+     <div id="one">
+        <h2>about as</h2>
+        <a href="#two">touch</a>
+     </div>
+
+     <div id="two">
+        <h2>about as</h2>
+        <a href="#one">touch</a>
+     </div>-->
+
+      <!--<div class="box"></div>-->
+
+      <!--<div class="wrap">
+        <div class="wrap"></div>
+      </div>-->
+
+      <!--<button class="btn"click></button>-->
+
+      <!--<ul class="menu">
+        <li class="menu-item">
+            <a href="" class="menu-link">Блог</a>
+        </li>
+        <li class="menu-item">
+            <a href="" class="menu-link">Профіль</a>
+        </li>
+        <li class="menu-item">
+            <a href="" class="menu-link">Контакти</a>
+        </li>
+    </ul>-->
+
+    <!--<div class="box"></div>-->
+
+    <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="">
 </body>
 </html>
