--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
         </li>
     </ul>-->
 
-    <!--<div class="box"></div>-->
+    <!--<div class="box"></div>--
 
-    <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="">
+    <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="">-->
 </body>
+<script src="./script.js"></script>
 </html>
